--- a/JsCourse_BySuperSimpleDev/rockpaperscissors.html
+++ b/JsCourse_BySuperSimpleDev/rockpaperscissors.html
@@ -6,26 +6,54 @@
     <title>Rock-Paper-Scissors</title>
     <style>
 
+        body{
+            background-color: black;
+            color:white;
+            font-size: medium;
+        }
         .display{
             display: block;
-            /* background-color: bisque; */
-            margin-top:20px;
-            padding:20px 20px 20px;
-            /* border-style: solid; */
+        }
+        button img{
+            width:100px;
+            height:100px;
+            border-style: solid;
+            border-color: white;
+            border-radius: 50px;
+            padding:30px;
+        }
+        button img:hover{
+            background-color: white;
+        }
+        button{
+            padding:10px 20px;
+            border-radius:20px;
+            border-style:none;
+            font-weight: bold;
+        }
+        .b_rock,.b_papper,.b_scissors{
+            color:white;
+            background: transparent;
+            border-style: none;
         }
 
     </style>
 </head>
 <body>
-    <button class="b_rock">Rock</button>
-    <button class="b_papper">Papper</button>
-    <button class="b_scissors">Scissors</button>
+    <h1>Rock-Paper-Scissors</h1>
+    <button class="b_rock"><img src="img/rock-emoji.png" class="rock" alt=""></button>
+    <button class="b_papper"><img src="img/papper-emoji.png" alt=""></button>
+    <button class="b_scissors"><img src="img/scissors-emoji.png" alt=""></button>
     <br>
     <br>
     <br>
     <button class="reset">Reset</button>
     <button class="ap">AutoPlay</button>
-    <div class="display"></div>
+    <div class="display">
+
+    </div>
+    <div class="result"></div>
+
 
     <script>
         let intervalId ;
@@ -35,14 +63,14 @@
             loss : 0,
             draw : 0
         }
-        display()
+        
         let b_rock = document.querySelector('.b_rock')
         let b_papper = document.querySelector('.b_papper')
         let b_scissors = document.querySelector('.b_scissors')
         let b_reset = document.querySelector('.reset')
         let b_display = document.querySelector('.display')
         let b_autoplay = document.querySelector('.ap')
-
+        display()
         
         function computerMove(){
             let r = Math.random()
@@ -86,6 +114,7 @@
                 }
             }
             localStorage.setItem('score',JSON.stringify(score))
+            document.querySelector('.result').innerHTML = `Your <img src="img/${move}-emoji.png"> Computer Move <img src="img/${cmove}-emoji.png">`
             display()
         }
         function reset(){
@@ -96,6 +125,7 @@
         }
         localStorage.setItem('score',JSON.stringify(score))
         display()
+        document.querySelector('.result').innerHTML = ''
         }
 
         function display(){
