--- a/JsCourse_BySuperSimpleDev/to-do.html
+++ b/JsCourse_BySuperSimpleDev/to-do.html
@@ -13,7 +13,7 @@
             padding:10px ;
             margin:10px;
         }
-        .B_add{
+        .B_add,.display button{
             color:white;
             background-color: #333;
             border-style:none;
@@ -36,25 +36,40 @@
         opacity:0.5;
         box-shadow : 5px 5px 10px rgba(0,0,0,0.3);
     }
-    .display{
+    .display,.inp_grid{
         display:grid;
-        grid-template-columns: 200px 100px 100px;
+        grid-template-columns: 300px 200px 100px;
         justify-content: center;
         align-items: center;
+        row-gap: 20px;
+        column-gap: 20px;
+    }
+    .display button{
+        background-color: red;
     }
     </style>
 </head>
 <body>
     <center>
-        <h1>Todo !</h1>
-        <label for="name">Task</label>
-        <input type="text" class="task" placeholder="what you want to do ?">
-        <label for="date">Date</label>
-        <input type="date" class="date">
-        <button class="B_add">Add</button>
-        <div class="display">
+
+    
+    <h1>Todo !</h1>
+    <div class="inp_grid">
+        <div>
+            <label for="name">Task</label>
+            <input type="text" class="task" placeholder="what you want to do ?">
         </div>
-    </center> 
+        <div>
+            <label for="date">Date</label>
+            <input type="date" class="date">
+        </div>
+        <button class="B_add">Add</button>
+    </div>
+
+    <div class="display"> 
+
+    </div>
+</center>
     <script src="todo.js"></script> 
 </body>
 </html>
